--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,11 @@
                  <groupId>org.apache.poi</groupId>
                  <artifactId>openxml4j</artifactId>
                  <version>1.0-beta</version>
-          </dependency>  </dependencies>
+          </dependency>
+          <dependency>
+          	<groupId>org.apache.commons</groupId>
+          	<artifactId>commons-io</artifactId>
+          	<version>1.3.2</version>
+          </dependency>
+  </dependencies>
 </project>
